# langchain-ydb

./: CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/scripts/: increment_version.py
.github/workflows/: lint.yml  publish.yml  python-publish.yml  tests.yml
docker/: docker-compose.yml
examples/: basic_example.ipynb
examples/compare_search/: app.py  requirements.txt
examples/compare_search/templates/: index.html
examples/local_rag_wiki/: Example.ipynb  fake_wiki_ydb.md
examples/rag-yandexgpt/: rag.ipynb
examples/rag-yandexgpt/docs/: 01-about.md  02-action.md  03-instructions.md  04-eco-strategy.md  05-patents-innovation.md  06-future-research.md  07-clinical-protocols.md  08-marine-flora.md  09-incident-response.md  10-r-d-cycle.md  11-production-process.md  12-success-stories.md  13-job-openings.md  14-innovation-week.md  15-clinical-team.md  16-employee-life.md  99-faq.md
examples/ru-sonnik-rag/: [RU] Sonnik.ipynb  requirements.txt  sonnik.txt  telegram_bot_wrapper.py
langchain_ydb/: vectorstores.py
tests/: fake_embeddings.py  test_vectorestore.py
