[project]
name = "langchain-ydb"
version = "0.0.7"  # AUTOVERSION
description = "An integration package connecting YDB and LangChain"
authors = []
readme = "README.md"
keywords = ["ydb", "langchain", "database", "AI"]
repository = "https://github.com/ydb-platform/langchain-ydb"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain-core (>=0.2.13,<0.4.0)",
    "ydb-dbapi (>=0.1.11,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"
mypy = "^1.15.0"
pytest-asyncio = "^0.26.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = ["examples"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
]


[tool.mypy]
disable_error_code = ["import-untyped"]
